kubernetes/.front-back-test/podback.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    app: backend

spec:
  containers:
    - name: backend
      image: tak47onejoon/ykk_backend
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service

spec:
  type: NodePort
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081
