kubernetes/.front-back-test/podfront.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    app: frontend

spec:
  containers:
    - name: frontend
      image: tak47onejoon/ykk_front
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  type: NodePort
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
